Update: Enhanced color transitions and added real food images
- Added smooth color transitions between sections
- Implemented dynamic primary color changes
- Replaced placeholder images with high-quality food photos
- Improved transition animations

--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
             <div class="menu-category">
                 <h3>Appetizers</h3>
                 <div class="menu-item" data-aos="fade-up">
-                    <img src="https://via.placeholder.com/150" alt="Bruschetta">
+                    <img src="https://images.unsplash.com/photo-1572695157366-5e585ab2b69f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Bruschetta">
                     <h4>Classic Bruschetta</h4>
                     <p>Fresh tomatoes, basil, and garlic on toasted bread</p>
                     <span class="price">$12</span>
                 </div>
                 <div class="menu-item" data-aos="fade-up">
-                    <img src="https://via.placeholder.com/150" alt="Calamari">
+                    <img src="https://images.unsplash.com/photo-1604909052743-94e838986d24?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Calamari">
                     <h4>Crispy Calamari</h4>
                     <p>Served with marinara sauce and lemon wedges</p>
                     <span class="price">$16</span>
@@ -49,13 +49,13 @@
             <div class="menu-category">
                 <h3>Main Course</h3>
                 <div class="menu-item" data-aos="fade-up">
-                    <img src="https://via.placeholder.com/150" alt="Steak">
+                    <img src="https://images.unsplash.com/photo-1600891964092-4316c288032e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Steak">
                     <h4>Grilled Ribeye Steak</h4>
                     <p>12 oz premium cut with roasted vegetables</p>
                     <span class="price">$42</span>
                 </div>
                 <div class="menu-item" data-aos="fade-up">
-                    <img src="https://via.placeholder.com/150" alt="Salmon">
+                    <img src="https://images.unsplash.com/photo-1519708227418-c8fd9a32b7a2?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Salmon">
                     <h4>Pan-Seared Salmon</h4>
                     <p>With quinoa and lemon butter sauce</p>
                     <span class="price">$34</span>
@@ -65,13 +65,13 @@
             <div class="menu-category">
                 <h3>Desserts</h3>
                 <div class="menu-item" data-aos="fade-up">
-                    <img src="https://via.placeholder.com/150" alt="Tiramisu">
+                    <img src="https://images.unsplash.com/photo-1571877227200-a0d98ea607e9?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Tiramisu">
                     <h4>Classic Tiramisu</h4>
                     <p>Coffee-flavored Italian dessert</p>
                     <span class="price">$10</span>
                 </div>
                 <div class="menu-item" data-aos="fade-up">
-                    <img src="https://via.placeholder.com/150" alt="Crème Brûlée">
+                    <img src="https://images.unsplash.com/photo-1470324161839-ce2bb6fa6bc3?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=800&q=80" alt="Crème Brûlée">
                     <h4>Crème Brûlée</h4>
                     <p>Rich custard topped with caramelized sugar</p>
                     <span class="price">$12</span>
