UX: automatic crossfading background images + smooth scroll-based color changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!-- Background layers for smooth crossfade on scroll -->
+    <div id="bg-layer-1" class="bg-layer"></div>
+    <div id="bg-layer-2" class="bg-layer"></div>
     <nav class="navbar">
         <div class="logo">Gourmet Haven</div>
         <ul class="nav-links">
