chore: update index content (hero text) and ensure bg layers are present)

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>Welcome to Gourmet Haven</h1>
-            <p>Experience culinary excellence in every bite</p>
+            <h1>Welcome to Gourmet Heaven</h1>
+            <p>Experience cullinary excellence in every bite</p>
             <a href="#menu" class="cta-button">View Menu</a>
         </div>
     </section>
